fix some syntax, change how text wrap works, and attempt to fix cover art scaleing again

--- a/data/music.css
+++ b/data/music.css
@@ -36,18 +36,20 @@
 .song-list-item.visible { display: flex; }
 
 .cover-art.link {
-	aspect-ratio: 1;
-	height: 7em;
-	flex-shrink: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	background-color: black;
 	border-right: 0.15em solid rgb(80, 80, 80);
 	border-top-left-radius: inherit;
 	border-bottom-left-radius: inherit;
+	height: 7em;
+	aspect-ratio: 1;
+	flex-shrink: 0;
 	overflow: hidden;
 }
 
 .cover-art.image {
-	object-fit: fill;
 	width: 100%;
 	height: 100%;
 	transition: scale 0.15s ease-out;
@@ -61,7 +63,7 @@
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	flex: auto;
+	flex: 1;
 	border-top-right-radius: inherit;
 	border-bottom-right-radius: inherit;
 	padding: 0 1em;
@@ -76,12 +78,16 @@
 
 .title-text {
 	font-size: 1.37em;
+	text-wrap: balance;
+	hyphens: auto;
 	margin: 0;
 	padding: 0;
 }
 
 .artist-text {
 	font-family: Verdana, serif;
+	text-wrap: balance;
+	hyphens: auto;
 	margin: 0;
 	padding: 0;
 }
@@ -121,7 +127,7 @@
 	border-radius: 9999px;
 	padding: 0.2em 0.35em;
 	margin: 0;
-	cursor:default;
+	cursor: default;
 	transition: background-color 0.1s ease-out;
 }
 .type-text:hover { background-color: rgba(var(--type-color), 0.15); }
@@ -139,7 +145,7 @@
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-around;
-	flex: auto;
+	flex: 1;
 }
 
 .dropdown-box {
